--- a/tex/writeup.tex
+++ b/tex/writeup.tex
@@ -3,7 +3,7 @@
 \usepackage{amsmath}
 
 \title{Exploring A star and Star Craft}
-\author{Jerlin Yuen (NetID: jy823, RUID: 214007343) and Mick Estiler (NetID: me6969, RUID: 589)}
+\author{Jerlin Yuen (NetID: jy823, RUID: 214007343) and Mick Estiler (RUID: mwe26, NetID: 201000182)}
 \date{\today} % or specify a date
 
 \begin{document}
